turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: not enough arguments for constructor Array: (_length: Int)Array[java.awt.Color].
Unspecified value parameter _length.
	var C = new Array[Color]
                ^LangtonsAnt:4: error: not enough arguments for constructor Array: (_length: Int)Array[Char].
Unspecified value parameter _length.
	var A = new Array[Char]
                ^